# SIN-Code-Doc-Coauthoring-Skill

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  install.sh  install.sh.doc.md  pyproject.toml  pyproject.toml.doc.md  requirements.txt
.github/workflows/: ceo-audit.yml
scripts/: doc-draft.sh  doc-draft.sh.doc.md  doc-export.sh  doc-export.sh.doc.md  doc-outline.sh  doc-outline.sh.doc.md  doc-render.sh  doc-render.sh.doc.md  doc-review.sh  doc-review.sh.doc.md  doc-start.sh  doc-start.sh.doc.md
src/sin_doc_coauthoring/: __init__.doc.md  __init__.py  __main__.doc.md  __main__.py  cli.doc.md  cli.py  context.doc.md  context.py  drafter.doc.md  drafter.py  exporter.doc.md  exporter.py  mcp_server.doc.md  mcp_server.py  outline.doc.md  outline.py  renderer.doc.md  renderer.py  reviewer.doc.md  reviewer.py  session.doc.md  session.py
src/sin_doc_coauthoring/cli_shims/: __init__.py  doc_context_gather.py  doc_diff_show.py  doc_export.py  doc_format_render.py  doc_outline_propose.py  doc_review.py  doc_section_draft.py  doc_section_save.py  doc_session_list.py  doc_start.py
templates/: adr.md  api.md  changelog.md  design.md  rfc.md  spec.md
tests/: __init__.doc.md  __init__.py  conftest.doc.md  conftest.py  test_cli.doc.md  test_cli.py  test_context.doc.md  test_context.py  test_drafter.doc.md  test_drafter.py  test_exporter.doc.md  test_exporter.py  test_mcp_server.doc.md  test_mcp_server.py  test_outline.doc.md  test_outline.py  test_renderer.doc.md  test_renderer.py  test_reviewer.doc.md  test_reviewer.py  test_session.doc.md  test_session.py
